# Cmake_Cpp_ConditionalCompile

./: ReadMyBlog.txt
source/: Base.hpp  CMakeLists.txt  main.cpp
source/China/: ChinaSolution.cpp  ChinaSolution.hpp
source/Euro/: EuroSolution.cpp  EuroSolution.hpp
source/Factory/: SolutionFactory.cpp  SolutionFactory.hpp
source/Japan/: JapanSolution.cpp  JapanSolution.hpp
